# ft_vox

./: .gitignore  CMakeLists.txt  README.md
include/GLFW/: glfw3.h  glfw3native.h
include/assimp/: revision.h
include/glad/: gl.h
res/shaders/: vertex.shader
src/: main.cpp
src/camera/: Camera.cpp  Camera.hpp
src/graphics/: IndexBuffer.cpp  IndexBuffer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/render/: Renderer.cpp  Renderer.hpp
src/textures/: Texture2D.cpp  Texture2D.hpp  TextureManager.cpp  TextureManager.hpp
src/utils/: callbacks.cpp  callbacks.hpp  declarations.cpp  declarations.hpp  utils.cpp  utils.hpp
src/wrappers/: wrapGLAD.cpp  wrapGLAD.hpp  wrapGLFW.cpp  wrapGLFW.hpp
